--- a/contact-us.html
+++ b/contact-us.html
@@ -124,7 +124,7 @@
 											<li><a href="portfolio-column-2.html">Portfolio Column 2</a></li>
 											<li><a href="portfolio-column-3.html">Portfolio Column 3</a></li>
 											<li><a href="portfolio-column-4.html">Portfolio Column 4</a></li>
-											<li><a href="portfolio-column-5.html">Portfolio Column 5</a></li>
+											<li><a href="directions.html">Portfolio Column 5</a></li>
 											<li><a href="portfolio-column-6.html">Portfolio Column 6</a></li>
 										</ul>									
 									</li>
@@ -359,7 +359,7 @@
 											<li><a href="portfolio-column-2.html">Homepage Version 2</a></li>
 											<li><a href="portfolio-column-3.html">Homepage Version 3</a></li>
 											<li><a href="portfolio-column-4.html">Homepage Version 4</a></li>
-											<li><a href="portfolio-column-5.html">Homepage Version 5</a></li>
+											<li><a href="directions.html">Homepage Version 5</a></li>
 											<li><a href="portfolio-column-6.html">Homepage Version 6</a></li>
 										</ul>									
 									</li>
