--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="#">О компании</a></li>
                 <li><a href="#">Преимущества</a></li>
-                <li><a href="portfolio-column-5.html">Направления</a>
+                <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="#">Москва - Санкт-Петербург</a></li>
                     <li><a href="#">Москва - Нижний Новгород</a></li>
@@ -777,11 +777,13 @@
               <img src="img/testimonial/team1.jpg" alt=""/>
             </div>
             <div class="test-text">
-              <p>Текст отзыва</p>
+              <p>Часто покупаю в регионах РФ и СНГ ретроавтомобили на запчасти и под восстановление, соответственно пользуюсь услугами доставки авто. Обращался в несколько компаний, но в итоге остановился на Госттрансе, поскольку с их помощью можно быстро отправить и редкий экземпляр в специальной фуре, и обычного донора автовозом.
+                Что радует, прежде чем перевезти автомобиль, предлагают его застраховать. Это особенно ценно, если отправляешь машину в хорошей сохранности. До сих пор все авто приходили абсолютно целыми, хотя и бывали небольшие задержки. С таможенным оформлением также помогали.
+              </p>
             </div>
             <div class="test-info">
-              <span class="test-name">Александр</span>
-              <span class="test-title">Руководитель - Компания</span>
+              <span class="test-name">Ринат Мансуров</span>
+              <span class="test-title"></span>
             </div>
           </div>
           <div class="single-testimonial">
@@ -858,7 +860,7 @@
     </a>
     <div class="latest-blog-info">
       <h3><a href="#">Страхование</a></h3>
-      <p>Для уверенности в полной сохранности отправления вы можете оформить страховой полис, покрывающий все возможные риски, возникающие при транспортировке. Наши специалисты помогут вам правильно подобрать программу страховния, рассчитают тарифы и подготовят необходимый комплект документов. </p>
+      <p>Для уверенности в полной сохранности отправления вы можете оформить страховой полис, покрывающий все возможные риски, возникающие при транспортировке. Наши специалисты помогут вам правильно подобрать программу страхования, рассчитают тарифы и подготовят необходимый комплект документов. </p>
     </div>
   </div>
   <!-- bottom blog end -->
