--- a/pricing.html
+++ b/pricing.html
@@ -99,7 +99,7 @@
               <ul id="nav">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="portfolio-column-5.html">Портфолио</a></li>
+                <li><a href="directions.html">Портфолио</a></li>
                 <li><a href="pricing.html">Тарифы</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
@@ -124,7 +124,7 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="portfolio-column-5.html">Портфолио</a></li>
+                <li><a href="directions.html">Портфолио</a></li>
                 <li><a href="pricing.html">Тарифы</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
@@ -350,7 +350,7 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="portfolio-column-5.html">Портфолио</a></li>
+                <li><a href="directions.html">Портфолио</a></li>
                 <li><a href="pricing.html">Тарифы</a></li>
                 <li><a href="contact-us.html">Контакты</a></li>
               </ul>
