--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
               <img src="img/testimonial/team1.jpg" alt=""/>
             </div>
             <div class="test-text">
-              <p>Часто покупаю в регионах РФ и СНГ ретроавтомобили на запчасти и под восстановление, соответственно пользуюсь услугами доставки авто. Обращался в несколько компаний, но в итоге остановился на Госттрансе, поскольку с их помощью можно быстро отправить и редкий экземпляр в специальной фуре, и обычного донора автовозом.
+              <p>Часто покупаю в регионах РФ и СНГ ретроавтомобили на запчасти и под восстановление, соответственно пользуюсь услугами доставки авто. Обращался в несколько компаний, но в итоге остановился на Гтрансе, поскольку с их помощью можно быстро отправить и редкий экземпляр в специальной фуре, и обычного донора автовозом.
                 Что радует, прежде чем перевезти автомобиль, предлагают его застраховать. Это особенно ценно, если отправляешь машину в хорошей сохранности. До сих пор все авто приходили абсолютно целыми, хотя и бывали небольшие задержки. С таможенным оформлением также помогали.
               </p>
             </div>
@@ -791,11 +791,11 @@
               <img src="img/testimonial/team2.jpg" alt=""/>
             </div>
             <div class="test-text">
-              <p>Текст отзыва 2</p>
+              <p>По мере роста бизнеса стало невозможно перегонять все машины из регионов самостоятельно, начали искать услуги автовоза по Приморью и восточной Сибири. Сложнее всего было с оформлением документов, с ними почти никто не работал, и приходилось решать вопросы дистанционно. В итоге обратился в компанию «ГТРАНС», изложил проблему и попросил рассчитать стоимость средней перевозки. Цена автовоза получилась одна из самых выгодных по региону, но главное – все документы перевозчик оформляет сам, включая страховку. Теперь стараемся собрать побольше машин к определенной дате и увезти их одним днем, в результате неплохо экономим.</p>
             </div>
             <div class="test-info">
-              <span class="test-name">Василий</span>
-              <span class="test-title">Генеральный директор - Компания</span>
+              <span class="test-name">Ким С.Д.</span>
+              <span class="test-title">Генеральный директор - Автоцентр «Амур»</span>
             </div>
           </div>
           <div class="single-testimonial">
@@ -803,11 +803,41 @@
               <img src="img/testimonial/team3.jpg" alt=""/>
             </div>
             <div class="test-text">
-              <p>Текст отзыва 3</p>
+              <p>Перед переездом из Минска в Москву понадобилось перевезти автомобили мой и жены. Изучив вопрос, решил нанять эвакуатор на две машины, но сделать это оказалось непросто – беларуские компании отказывались работать с таможней, а российские выставляли совсем не гуманный ценник.
+                Ехать на границу самому или нанимать юриста я не хотел, поэтому начал оставлять заявки на сайтах разных перевозчиков. Цена ГТРАНСА на доставку в Москву автовозом оказалась почти на 10% ниже чем у конкурентов, плюс они сами оформили страховку и все документы для прохождения границы. Если придется еще раз решать подобные задачи, обязательно обращусь сюда. Отдельная благодарность менеджеру Светлане М. за регулярное информирование о том, где находятся машины.
+              </p>
             </div>
             <div class="test-info">
-              <span class="test-name">Алексей Вячеславович Руднев</span>
-              <span class="test-title">Генеральный директор - Компания</span>
+              <span class="test-name">Николай</span>
+              <span class="test-title"></span>
+            </div>
+          </div>
+          <div class="single-testimonial">
+            <div class="test-img">
+              <img src="img/testimonial/team3.jpg" alt=""/>
+            </div>
+            <div class="test-text">
+              <p>Хочу выразить признательность менеджерам компании «ГТранс» за содействие в быстром и качественном решении задачи по доставке автовозами целого парка машин. Перед открытием филиала в Новосибирской области нужно было забрать более 15 автомобилей, отвезти их в официальный сервис дилера, а затем доставить в парк предприятия.
+                Сотрудники «ГТранс» не только организовали своевременную подачу транспорта во все пункты маршрута, но и подготовили все необходимые документы для доставки авто по дорогам общего пользования. Все сопроводительные документы от сервиса доставили вместе с машинами без дополнительных курьерских услуг.
+              </p>
+            </div>
+            <div class="test-info">
+              <span class="test-name">Папанин М.Ю.</span>
+              <span class="test-title">Генеральный директор - ТАКСИ ВЕТЕР</span>
+            </div>
+          </div>
+          <div class="single-testimonial">
+            <div class="test-img">
+              <img src="img/testimonial/team3.jpg" alt=""/>
+            </div>
+            <div class="test-text">
+              <p>Регулярно пользуемся услугами ООО «ГТРАНС» для перевозки авто от дилера завода «МАЗ» из Белоруссии в Россию, выражаем благодарность за четкое соблюдение сроков и постоянную готовность пойти навстречу заказчику. Благодаря сотрудничеству с данным перевозчиком налажены бесперебойные поставки грузовой техники с перевозкой тяжелыми автовозами по России, а также доставка запчастей к ним.
+                Также хотим отметить содействие в страховании перевозимых грузовиков, оформлении таможенных документов и организации доставки крупных партий техники по РФ. Благодаря квалификации менеджеров «ГТРАНС» мы смогли полностью делегировать им эту часть задач.
+              </p>
+            </div>
+            <div class="test-info">
+              <span class="test-name">Лиходеенко П.А.</span>
+              <span class="test-title">Генеральный директор - ООО «МашСнаб»</span>
             </div>
           </div>
         </div>
