--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
   <div class="container">
     <div class="row">
       <!-- creative-img start -->
-      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 hidden-sm">
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 hidden-sm creative-intensy-area__flex-item">
         <div class="creative-img">
           <img src="img/creative/top_b.png" alt=""/>
         </div>
