--- a/pages/moscow-spb.html
+++ b/pages/moscow-spb.html
@@ -213,7 +213,7 @@
       <div class="col-md-12 breadcrumb-padding pages-p">
         <div class="breadcrumb-title">
           <h1>Москва - Санкт-Петербург</h1>
-          <h2>Перевозка автомобилей по маршрутам туда и обратно</h2>
+          <h2>Перевозка автомобилей по маршрутам</h2>
         </div>
       </div>
     </div>
@@ -245,18 +245,10 @@
       <div class="col-lg-6 col-md-6 col-sm-6">
         <div class="love-work">
           <h2 class="heading-inner"><strong>Из Москвы </strong>в Санкт-Петербург</h2>
-          <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats
-            vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit
-            voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis
-            et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-            aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui.</p>
-          <p>Ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-            consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
-            aliquam quaerat voluptatem. Asunt in anim uis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla.</p>
-          <p> Our template is the perfect choice for your business. It’s loaded with features, options & page layouts.
-            Plus we have the best customer support around, quia consequuntur dolores but dont take our word for it, ask
-            any of our 15,000+ users! </p>
+          <p>Компания GTrans осуществляет полный спектр услуг в области перевозки легковых и грузовых автомобилей из Москвы в Санкт-Петербург и обратно. Мы поможем вам с доставкой вашего транспортного средства в пункт назначения максимально оперативно, подготовим все необходимые документы, произведём погрузку и разгрузку в соблюдением строгих требований безопасности.</p>
+          <p>Отправляя автомобили автовозами нашей компании, вы можете быть уверены в соблюдении сроков и полной сохранности вашего имущества. Доверьте свой автомобиль профессионалам - мы занимаемся перевозками уже более 8 лет и знаем все тонкости работы со всеми типами транспортных средств. </p>
+          <p>Автопарк нашей компании состоит из современных тягачей и специализированных прицепов для всех существующих типов транспортных средств для дорог обещго пользования - мототранспорт, легковые и грузовые автомобили, коммерческий транспорт, автобусы. Надёжные механизмы фиксации полностью предотвращают какое-либо перемещение и повреждение имущества в процессе транспортировки.</p>
+          <p>Воспользоваться нашими услугаим очень просто - оставьте заявку на сайте или свяжитесь с нами любым удобным для вас способом. Наши менеджеры оператинво свяжутся с вами и подробно расскажут о дальнейших действиях. </p>
         </div>
       </div>
       <!-- love-work end -->
