--- a/about-us.html
+++ b/about-us.html
@@ -61,7 +61,7 @@
 
   <!-- style CSS
   ============================================ -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <!-- responsive CSS
   ============================================ -->
@@ -79,7 +79,6 @@
 
 <!-- Add your site or application content here -->
 
-<!-- header start -->
 <header>
   <!-- header-area start -->
   <div id="sticker" class="header-area">
@@ -88,7 +87,8 @@
         <!-- logo start -->
         <div class="col-md-2 col-lg-3">
           <div class="logo">
-            <a href="index.html"><img src="img/logo/logo.svg" alt="" width="100"/></a>
+            <a href="index.html"><img class="logo-img" src="img/logo/logo-simple.svg" alt=""
+                                      width="150"/></a>
           </div>
         </div>
         <!-- logo end -->
@@ -98,10 +98,44 @@
             <nav>
               <ul id="nav">
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="about-us.html">О компании</a></li>
-                <li><a href="directions.html">Портфолио</a></li>
-                <li><a href="pricing.html">Тарифы</a></li>
-                <li><a href="contact-us.html">Контакты</a></li>
+                <li><a href="#">О компании</a></li>
+                <li><a href="#">Преимущества</a></li>
+                <li><a href="directions.html">Направления</a>
+                  <ul class="sub-menu">
+                    <li><a href="#">Москва - Санкт-Петербург</a></li>
+                    <li><a href="#">Москва - Нижний Новгород</a></li>
+                    <li><a href="#">Москва - Уфа</a></li>
+                    <li><a href="#">Москва - Казань</a></li>
+                    <li><a href="#">Москва - Ростов-на-Дону</a></li>
+                    <li><a href="#">Москва - Челябинск</a></li>
+                    <li><a href="#">Москва - Калининград</a></li>
+                    <li><a href="#">Москва - Краснодар</a></li>
+                    <li><a href="#">Москва - Сургут</a></li>
+                    <li><a href="#">Москва - Новосибирск</a></li>
+                    <li><a href="#">Москва - Екатеринбург</a></li>
+                    <li><a href="#">Москва - Иркутск</a></li>
+                    <li><a href="#">Москва - Хабаровск</a></li>
+                    <li><a href="#">Москва - Владикавказ</a></li>
+                    <li><a href="#">Москва - Махачкала</a></li>
+                    <li><a href="#">Санкт-Петербург - Москва</a></li>
+                    <li><a href="#">Нижний Новгород - Москва</a></li>
+                    <li><a href="#">Уфа - Москва</a></li>
+                    <li><a href="#">Казань - Москва</a></li>
+                    <li><a href="#">Ростов-на-Дону - Москва</a></li>
+                    <li><a href="#">Челябинск - Москва</a></li>
+                    <li><a href="#">Калининград - Москва</a></li>
+                    <li><a href="#">Краснодар - Москва</a></li>
+                    <li><a href="#">Сургут - Москва</a></li>
+                    <li><a href="#">Новосибирск - Москва</a></li>
+                    <li><a href="#">Екатеринбург - Москва</a></li>
+                    <li><a href="#">Иркутск - Москва</a></li>
+                    <li><a href="#">Хабаровск - Москва</a></li>
+                    <li><a href="#">Владикавказ - Москва</a></li>
+                    <li><a href="#">Махачкала - Москва</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Автопарк</a></li>
+                <li><a href="#">Контакты</a></li>
               </ul>
             </nav>
           </div>
@@ -118,15 +152,49 @@
         <div class="col-md-12">
           <div class="mobile-menu">
             <div class="logo">
-              <a href="index.html"><img src="img/logo/logo.svg" alt="" width="70"/></a>
+              <a href="index.html"><img src="img/logo/logo-small-black.svg" alt="" width="80"/></a>
             </div>
             <nav id="dropdown">
               <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="about-us.html">О компании</a></li>
-                <li><a href="directions.html">Портфолио</a></li>
-                <li><a href="pricing.html">Тарифы</a></li>
-                <li><a href="contact-us.html">Контакты</a></li>
+                <li><a href="#">О компании</a></li>
+                <li><a href="#">Преимущества</a></li>
+                <li><a href="#">Направления</a>
+                  <ul class="sub-menu">
+                    <li><a href="#">Москва - Санкт-Петербург</a></li>
+                    <li><a href="#">Москва - Нижний Новгород</a></li>
+                    <li><a href="#">Москва - Уфа</a></li>
+                    <li><a href="#">Москва - Казань</a></li>
+                    <li><a href="#">Москва - Ростов-на-Дону</a></li>
+                    <li><a href="#">Москва - Челябинск</a></li>
+                    <li><a href="#">Москва - Калининград</a></li>
+                    <li><a href="#">Москва - Краснодар</a></li>
+                    <li><a href="#">Москва - Сургут</a></li>
+                    <li><a href="#">Москва - Новосибирск</a></li>
+                    <li><a href="#">Москва - Екатеринбург</a></li>
+                    <li><a href="#">Москва - Иркутск</a></li>
+                    <li><a href="#">Москва - Хабаровск</a></li>
+                    <li><a href="#">Москва - Владикавказ</a></li>
+                    <li><a href="#">Москва - Махачкала</a></li>
+                    <li><a href="#">Санкт-Петербург - Москва</a></li>
+                    <li><a href="#">Нижний Новгород - Москва</a></li>
+                    <li><a href="#">Уфа - Москва</a></li>
+                    <li><a href="#">Казань - Москва</a></li>
+                    <li><a href="#">Ростов-на-Дону - Москва</a></li>
+                    <li><a href="#">Челябинск - Москва</a></li>
+                    <li><a href="#">Калининград - Москва</a></li>
+                    <li><a href="#">Краснодар - Москва</a></li>
+                    <li><a href="#">Сургут - Москва</a></li>
+                    <li><a href="#">Новосибирск - Москва</a></li>
+                    <li><a href="#">Екатеринбург - Москва</a></li>
+                    <li><a href="#">Иркутск - Москва</a></li>
+                    <li><a href="#">Хабаровск - Москва</a></li>
+                    <li><a href="#">Владикавказ - Москва</a></li>
+                    <li><a href="#">Махачкала - Москва</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Автопарк</a></li>
+                <li><a href="#">Контакты</a></li>
               </ul>
             </nav>
           </div>
@@ -163,15 +231,9 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-6">
         <div class="about-intensy-text">
-          <h1 class="about-intensy-title">Добро пожаловать в <strong>UBIS</strong></h1>
-          <p>Современные технологии, по нашему мнению, должны быть доступны всем. Качественное развитие получают все
-            отрасли человеческой деятельности, и веб-технологии не исключение. Понятный и удобный веб-сайт поможет вашей
-            компании расположить к себе потребителя и увеличить прибыль, а значит, получить допольнительные возможности
-            расширения бизнеса.</p>
-          <p>Компания UBIS предлагает комплексные услуги по созданию и продвижению сайтов в наиболее популярных
-            поисковых системах - Google и Яндекс. Настройка рекламных кампаний с составлением наиболее релевантного
-            семантического ядра, удешевление стоимости клика, продвижение в поисковой выдаче естественным образом - без
-            всего этого ваш веб-ресурс будет просто очередной страницей в интернете. </p>
+          <h1 class="about-intensy-title">Добро пожаловать в <strong>GTrans</strong></h1>
+          <p>Мы считаем, что качественные услуги во всех областях должны быть доступны каждому, в том числе и в вопросах перевозок. На деле же выбор хорошей транспортной компании может затянуться буквально на целую вечность. Где-то отзывы негативные или их вообще нет, эта компания на грани банкротства и с ней не стоит связываться, иной же раз без слёз невозможно смотреть на автопарк - настолько он уставший и негодный к эксплуатации. </p>
+          <p>В компании GTrans основательно подошли к делу - мы предлагает только лучший сервис по доступным ценам. Современные автовозы проходят регулярное техническое обслуживания и предрейсовые осмотры для того, чтобы вы могли быть уверены в безопасности и своевременной доставке вашего автомоблия. Профессиональные менеджеры всегда готовы помочь разобраться с тонкостями перевозок, подсказать по тарифам, оформить страховой полис. Самое же главное - наши клиенты всегда положительно отзываются об услугах компании, мы стараемся идти на встречу каждому заказчику. </p>
           <p>Что вы получаете, обратившись к нам:</p>
           <ul>
             <li>Персональный подход и гибкие тарифы</li>
@@ -397,14 +459,14 @@
             <ul>
               <li>
                 <span>Адрес:</span>
-									<span>г. Москва<br>
+                                <span>г. Москва<br>
 									ул. Красная Площадь, д. 1<br>
 									Лично</span>
               </li>
               <li>
                 <span>Телефоны:</span>
-									<span>
-										+7 (964) 761-79-17 - Дмитрий<br>
+                                <span>
+										+7 (999) 999-99-99 - Менеджер по безысходности<br>
 									</span>
               </li>
             </ul>
@@ -418,13 +480,13 @@
             <ul>
               <li class="cc-space">
                 <span>Email:</span>
-									<span><a href="#">support@sitename.com</a> <br/>
+                                <span><a href="#">support@sitename.com</a> <br/>
 									<a href="#">info@sitename.com</a></span>
                 <div class="su-spacer"></div>
               </li>
               <li>
                 <span>Социальные сети:</span>
-									<span>
+                                <span>
 										<a href="#"><i class="fa fa-facebook"></i></a>
 										<a href="#"><i class="fa fa-linkedin-square"></i></a>
 										<a href="#"><i class="fa fa-google-plus"></i></a>
@@ -444,20 +506,21 @@
   <div class="footer-bottom-area">
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-6">
+        <div class="col-xs-12 col-sm-12 col-md-4">
           <div class="copyright">
-            <p>Ubis Studio Inc. © 2016</p>
+            <p>Gtrans Company © 2017</p>
           </div>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-6">
+        <div class="col-xs-12 col-sm-12 col-md-8">
           <div class="footer-menu">
             <nav>
               <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="about-us.html">О компании</a></li>
-                <li><a href="directions.html">Портфолио</a></li>
-                <li><a href="pricing.html">Тарифы</a></li>
-                <li><a href="contact-us.html">Контакты</a></li>
+                <li><a href="#">О компании</a></li>
+                <li><a href="#">Преимущества</a></li>
+                <li><a href="#">Направления</a></li>
+                <li><a href="#">Автопарк</a></li>
+                <li><a href="#">Контакты</a></li>
               </ul>
             </nav>
           </div>
