--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
   ============================================ -->
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>UBIS | О компании</title>
+  <title>GTrans | О компании</title>
   <meta name="description" content="">
 
   <!-- Mobile specific metas
@@ -270,7 +270,7 @@
           <div class="progress-circular">
             <input type="text" class="knob" value="0" data-rel="75" data-linecap="round" data-width="175"
                    data-bgcolor="#444444" data-fgcolor="#338da8" data-thickness=".10" data-readonly="true" disabled>
-            <h4 class="progress-h4">Веб-дизайн</h4>
+            <h4 class="progress-h4">Первое</h4>
           </div>
         </div>
       </div>
@@ -281,7 +281,7 @@
           <div class="progress-circular">
             <input type="text" class="knob" value="0" data-rel="75" data-linecap="round" data-width="175"
                    data-bgcolor="#444444" data-fgcolor="#338da8" data-thickness=".10" data-readonly="true" disabled>
-            <h4 class="progress-h4">Графический дизайн</h4>
+            <h4 class="progress-h4">Второе</h4>
           </div>
         </div>
       </div>
@@ -292,7 +292,7 @@
           <div class="progress-circular">
             <input type="text" class="knob" value="0" data-rel="95" data-linecap="round" data-width="175"
                    data-bgcolor="#444444" data-fgcolor="#338da8" data-thickness=".10" data-readonly="true" disabled>
-            <h4 class="progress-h4">HTML и CSS</h4>
+            <h4 class="progress-h4">Третье</h4>
           </div>
         </div>
       </div>
@@ -303,7 +303,7 @@
           <div class="progress-circular">
             <input type="text" class="knob" value="0" data-rel="55" data-linecap="round" data-width="175"
                    data-bgcolor="#444444" data-fgcolor="#338da8" data-thickness=".10" data-readonly="true" disabled>
-            <h4 class="progress-h4">Java Script</h4>
+            <h4 class="progress-h4">Четвертое</h4>
           </div>
         </div>
       </div>
@@ -318,8 +318,8 @@
     <div class="row">
       <div class="col-md-12">
         <div class="about-section-heading">
-          <h1 class="about-intensy-title">НАША КРЕАТИВНАЯ <strong> КОМАНДА</strong></h1>
-          <p>Способна воплотить ваши самые смелые пожелания в дизайне и функицональности сайта</p>
+          <h1 class="about-intensy-title">НАША <strong> КОМАНДА</strong></h1>
+          <p>Профессионалы с многолетним опытом</p>
         </div>
       </div>
     </div>
