--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <nav>
               <ul id="nav">
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="#">О компании</a></li>
+                <li><a href="about-us.html">О компании</a></li>
                 <li><a href="#">Преимущества</a></li>
                 <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
@@ -157,7 +157,7 @@
             <nav id="dropdown">
               <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="#">О компании</a></li>
+                <li><a href="about-us.html">О компании</a></li>
                 <li><a href="#">Преимущества</a></li>
                 <li><a href="#">Направления</a>
                   <ul class="sub-menu">
@@ -997,7 +997,7 @@
             <nav>
               <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="#">О компании</a></li>
+                <li><a href="about-us.html">О компании</a></li>
                 <li><a href="#">Преимущества</a></li>
                 <li><a href="#">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
