--- a/directions.html
+++ b/directions.html
@@ -99,7 +99,7 @@
             <nav>
               <ul id="nav">
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="#">О компании</a></li>
+                <li><a href="about-us.html">О компании</a></li>
                 <li><a href="#">Преимущества</a></li>
                 <li><a href="#">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
@@ -125,7 +125,7 @@
             <nav id="dropdown">
               <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="#">О компании</a></li>
+                <li><a href="about-us.html">О компании</a></li>
                 <li><a href="#">Преимущества</a></li>
                 <li><a href="#">Направления</a>
                   <ul class="sub-menu">
@@ -772,7 +772,7 @@
             <nav>
               <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="#">О компании</a></li>
+                <li><a href="about-us.html">О компании</a></li>
                 <li><a href="#">Преимущества</a></li>
                 <li><a href="#">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
