--- a/index-4.html
+++ b/index-4.html
@@ -5,7 +5,7 @@
   ============================================ -->
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Home 4 - Intensy</title>
+  <title>GTrans | еревозка автомобилей из Москвы в Санкт-Петербург и обратно</title>
   <meta name="description" content="">
 
   <!-- Mobile specific metas
@@ -681,8 +681,8 @@
       <!-- single-counter start -->
       <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
         <div class="single-counter">
-          <h2 class="counter">75</h2>
-          <h3>ПЕРЕВОЗОК В ДЕНЬ</h3>
+          <h2 class="counter">15</h2>
+          <h3>МЕНЕДЖЕРОВ</h3>
         </div>
       </div>
       <!-- single-counter end -->
@@ -692,6 +692,7 @@
 <!-- counter-area end -->
 <!-- video-area start -->
 <div class="video-area-4 fix">
+  <div class="dark-bg"></div>
   <div id="bg-container">
     <video id="bg" poster="/img/slider/slider-1/3.jpg" autoplay loop controls tabindex="0">
       <source src="video/video-360p.mp4" type="video/mp4">
@@ -701,8 +702,8 @@
     <h2><strong><span class="typewrite" data-period="2000" data-type='[ "БЫСТРАЯ","КАЧЕСТВЕННАЯ","СВОЕВРЕМЕННАЯ" ]'>
 			<span class="wrap"></span>
 		    </span></strong> ДОСТАВКА АВТОМОБИЛЕЙ</h2>
-    <p>Intensy is best design ever design from bdthemes ltd, fully hand crafted with huge taste :)</p>
-    <a class="read-more" href="#">Purchase Now</a>
+    <p></p>
+    <a class="read-more" href="#">Оставить заявку</a>
   </div>
 </div>
 <!-- video-area end -->
