--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <li><a href="#">Преимущества</a></li>
                 <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
-                    <li><a href="#">Москва - Санкт-Петербург</a></li>
+                    <li><a href="index-4.html">Москва - Санкт-Петербург</a></li>
                     <li><a href="#">Москва - Нижний Новгород</a></li>
                     <li><a href="#">Москва - Уфа</a></li>
                     <li><a href="#">Москва - Казань</a></li>
@@ -112,7 +112,7 @@
                     <li><a href="#">Москва - Хабаровск</a></li>
                     <li><a href="#">Москва - Владикавказ</a></li>
                     <li><a href="#">Москва - Махачкала</a></li>
-                    <li><a href="#">Санкт-Петербург - Москва</a></li>
+                    <li><a href="index-4.html">Санкт-Петербург - Москва</a></li>
                     <li><a href="#">Нижний Новгород - Москва</a></li>
                     <li><a href="#">Уфа - Москва</a></li>
                     <li><a href="#">Казань - Москва</a></li>
