--- a/index-4.html
+++ b/index-4.html
@@ -5,7 +5,7 @@
   ============================================ -->
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>GTrans | еревозка автомобилей из Москвы в Санкт-Петербург и обратно</title>
+  <title>GTrans | Перевозка автомобилей из Москвы в Санкт-Петербург и обратно</title>
   <meta name="description" content="">
 
   <!-- Mobile specific metas
@@ -707,41 +707,29 @@
   </div>
 </div>
 <!-- video-area end -->
-<!-- free-shipping-area start -->
-<div class="free-shipping-area fix">
+<!-- service-dev-area start -->
+<div class="service-dev-area">
   <div class="container">
     <div class="row">
-      <!-- single-ship start -->
-      <div class="col-lg-4 colmd-4 col-sm-4">
-        <div class="single-ship">
-          <i class="fa fa-truck"></i>
-          <h3>FREE SHIPPING</h3>
-          <p>FREE SHIPPING ON EVERYTHING</p>
+      <div class="col-xs-12 col-sm-6 col-md-6">
+        <div class="service-dev-img">
+          <img src="img/service/camera.jpg" alt="" />
         </div>
       </div>
-      <!-- single-ship end -->
-      <!-- single-ship start -->
-      <div class="col-lg-4 colmd-4 col-sm-4">
-        <div class="single-ship">
-          <i class="fa fa-money"></i>
-          <h3>MONEY BACK</h3>
-          <p>REFUND 100% IF FRAUD STOCK</p>
+      <div class="col-xs-12 col-sm-6 col-md-6">
+        <div class="service-dev-text">
+          <h2>DEVELOPMENT <strong>SERVICES</strong></h2>
+          <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections.</p>
+          <p>The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. "What's happened to me?" he thought. </p>
+          <p>It wasn't a dream. His room, a proper human room although a little too small, lay peacefully between its four familiar walls. A collection of textile samples lay spread out on the table </p>
+          <p>Samsa was a travelling salesman - and above it there hung a picture that he had recently cut out of an illustrated magazine anoa who sat lower arm towards the viewer. Gregor then turned to look out the window at the dull weather.</p>
+          <a class="readon border black" href="#">Learn More</a>
         </div>
       </div>
-      <!-- single-ship end -->
-      <!-- single-ship start -->
-      <div class="col-lg-4 colmd-4 col-sm-4">
-        <div class="single-ship">
-          <i class="fa fa-thumbs-up"></i>
-          <h3>COMMITMENT</h3>
-          <p>100% COMMITMENT GENUINE SALES</p>
-        </div>
-      </div>
-      <!-- single-ship end -->
     </div>
   </div>
 </div>
-<!-- free-shipping-area end -->
+<!-- service-dev-area end -->
 
 <div class="latest-blog-area fix">
   <!-- top blog start -->
