--- a/index-4.html
+++ b/index-4.html
@@ -713,16 +713,16 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-6">
         <div class="service-dev-img">
-          <img src="img/service/camera.jpg" alt="" />
+          <img src="img/slider/slider-1/1.jpg" alt="" />
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6">
         <div class="service-dev-text">
-          <h2>DEVELOPMENT <strong>SERVICES</strong></h2>
-          <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections.</p>
-          <p>The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. "What's happened to me?" he thought. </p>
-          <p>It wasn't a dream. His room, a proper human room although a little too small, lay peacefully between its four familiar walls. A collection of textile samples lay spread out on the table </p>
-          <p>Samsa was a travelling salesman - and above it there hung a picture that he had recently cut out of an illustrated magazine anoa who sat lower arm towards the viewer. Gregor then turned to look out the window at the dull weather.</p>
+          <h2>ПЕРЕВОЗКА <strong>АВТОМОБИЛЕЙ</strong></h2>
+          <p>Большой текст</p>
+          <p></p>
+          <p></p>
+          <p></p>
           <a class="readon border black" href="#">Learn More</a>
         </div>
       </div>
