--- a/directions.html
+++ b/directions.html
@@ -100,7 +100,7 @@
               <ul id="nav">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Преимущества</a></li>
+                <li><a href="#">Услуги</a></li>
                 <li><a href="#">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
                 <li><a href="#">Контакты</a></li>
@@ -126,7 +126,7 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Преимущества</a></li>
+                <li><a href="#">Услуги</a></li>
                 <li><a href="#">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="#">Москва - Санкт-Петербург</a></li>
@@ -773,7 +773,7 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Преимущества</a></li>
+                <li><a href="#">Услуги</a></li>
                 <li><a href="#">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
                 <li><a href="#">Контакты</a></li>
