--- a/index-4.html
+++ b/index-4.html
@@ -95,7 +95,7 @@
               <ul id="nav">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Преимущества</a></li>
+                <li><a href="#">Услуги</a></li>
                 <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="#">Москва - Санкт-Петербург</a></li>
@@ -154,8 +154,8 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Преимущества</a></li>
-                <li><a href="#">Направления</a>
+                <li><a href="#">Услуги</a></li>
+                <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="#">Москва - Санкт-Петербург</a></li>
                     <li><a href="#">Москва - Нижний Новгород</a></li>
@@ -285,7 +285,7 @@
                data-splitout="none"
                data-elementdelay="0.1"
                data-endelementdelay="0.1"
-               style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#'
+               style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#about-company'
                                                                                                class='readon border large white'>Узнать больше</a>
           </div>
         </li>
@@ -369,7 +369,7 @@
                data-splitout="none"
                data-elementdelay="0.1"
                data-endelementdelay="0.1"
-               style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#'
+               style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#about-company'
                                                                                                class='readon border large white'>Узнать больше</a>
           </div>
         </li>
@@ -378,8 +378,31 @@
   </div>
 </div>
 <!-- END HOME SLIDER -->
+<!-- service-dev-area start -->
+<div class="service-dev-area" id="about-company">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-6">
+        <div class="service-dev-img">
+          <img src="img/slider/slider-1/1.jpg" alt="" />
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-6">
+        <div class="service-dev-text">
+          <h2>ПЕРЕВОЗКА <strong>АВТОМОБИЛЕЙ</strong></h2>
+          <p>Процесс перевозки транспортных средств по дорогам общего пользования на специализированных прицепах и грузовиках-автовозах требует от компании серьёзной подготовки и знания всех тонкостей оказания такого рода услуг. Перевозчики с небольшим опытом или без такогового вообще часто не могут правильно организовать весь процесс, что приводит к срыву сроков доставки. Поэтому мы рекомендуем обращаться только к проверенным профессионалам. </p>
+          <p>Компания GTrans же более 8 лет занимается перевозками самого разнообразного траснпорта. За это время специалисты компании приобрели бесценный опыт, который нельзя заменить ни новейшими прицепами, ни красивым офисом. Безусловно, эти составляющие также играют роль - именно поэтому мы озаботились приобретением только современных транспортных средств и прицепов ведущих мировых производителей. А посетив наш офис, вы поймёте, что вполне возможно сочетать все преимущества, полностью избавившись от недостатков. Первоклассный сервис, гибкая тарифная политика и строгое соблюдение договорённостей не оставят вас равнодушными. </p>
+          <p></p>
+          <p></p>
+          <a class="readon border black" href="#features">Наши преимущества</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- service-dev-area end -->
 <!-- service-area start -->
-<div class="service-area-4 fix">
+<div class="service-area-4 fix" id="features">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -395,7 +418,7 @@
       <!-- single-service start -->
       <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
         <div class="single-service-4">
-          <img src="/img/icons/shield.png">
+          <img src="img/icons/shield.png">
           <h3>Гарантия сохранности</h3>
         </div>
       </div>
@@ -403,7 +426,7 @@
       <!-- single-service start -->
       <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
         <div class="single-service-4">
-          <img src="/img/icons/truck.png">
+          <img src="img/icons/truck.png">
           <h3>Собственный автопарк</h3>
         </div>
       </div>
@@ -411,7 +434,7 @@
       <!-- single-service start -->
       <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
         <div class="single-service-4">
-          <img src="/img/icons/clock.png">
+          <img src="img/icons/clock.png">
           <h3>Соблюдение сроков</h3>
         </div>
       </div>
@@ -419,7 +442,7 @@
       <!-- single-service start -->
       <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
         <div class="single-service-4">
-          <img src="/img/icons/price.png">
+          <img src="img/icons/price.png">
           <h3>Доступные тарифы</h3>
         </div>
       </div>
@@ -574,6 +597,64 @@
   </div>
 </div>
 <!-- features-area end -->
+
+<!-- counter-area start -->
+<div class="counter-area fix">
+  <div class="container">
+    <div class="row">
+      <!-- single-counter start -->
+      <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+        <div class="single-counter">
+          <h2 class="counter">12798</h2>
+          <h3>АВТОМОБИЛЕЙ ПЕРЕВЕЗЕНО</h3>
+        </div>
+      </div>
+      <!-- single-counter end -->
+      <!-- single-counter start -->
+      <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+        <div class="single-counter">
+          <h2 class="counter">8</h2>
+          <h3>ЛЕТ РАБОТЫ</h3>
+        </div>
+      </div>
+      <!-- single-counter end -->
+      <!-- single-counter start -->
+      <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+        <div class="single-counter">
+          <h2 class="counter">1546</h2>
+          <h3>ПОСТОЯННЫХ КЛИЕНТОВ</h3>
+        </div>
+      </div>
+      <!-- single-counter end -->
+      <!-- single-counter start -->
+      <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+        <div class="single-counter">
+          <h2 class="counter">15</h2>
+          <h3>МЕНЕДЖЕРОВ</h3>
+        </div>
+      </div>
+      <!-- single-counter end -->
+    </div>
+  </div>
+</div>
+<!-- counter-area end -->
+<!-- video-area start -->
+<div class="video-area-4 fix">
+  <div class="dark-bg"></div>
+  <div id="bg-container">
+    <video id="bg" poster="img/slider/slider-1/3.jpg" autoplay loop controls tabindex="0">
+      <source src="video/video-360p.mp4" type="video/mp4">
+    </video>
+  </div>
+  <div class="video-text">
+    <h2><strong><span class="typewrite" data-period="2000" data-type='[ "БЫСТРАЯ","КАЧЕСТВЕННАЯ","СВОЕВРЕМЕННАЯ" ]'>
+			<span class="wrap"></span>
+		    </span></strong> ДОСТАВКА АВТОМОБИЛЕЙ</h2>
+    <p></p>
+    <a class="read-more" href="#">Оставить заявку</a>
+  </div>
+</div>
+<!-- video-area end -->
 <!-- upcoming-product-area start -->
 <div class="upcoming-product-area fix">
   <div class="container">
@@ -650,87 +731,7 @@
   </div>
 </div>
 <!-- upcoming-product-area start -->
-<!-- counter-area start -->
-<div class="counter-area fix">
-  <div class="container">
-    <div class="row">
-      <!-- single-counter start -->
-      <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-        <div class="single-counter">
-          <h2 class="counter">12798</h2>
-          <h3>АВТОМОБИЛЕЙ ПЕРЕВЕЗЕНО</h3>
-        </div>
-      </div>
-      <!-- single-counter end -->
-      <!-- single-counter start -->
-      <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-        <div class="single-counter">
-          <h2 class="counter">8</h2>
-          <h3>ЛЕТ РАБОТЫ</h3>
-        </div>
-      </div>
-      <!-- single-counter end -->
-      <!-- single-counter start -->
-      <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-        <div class="single-counter">
-          <h2 class="counter">1546</h2>
-          <h3>ПОСТОЯННЫХ КЛИЕНТОВ</h3>
-        </div>
-      </div>
-      <!-- single-counter end -->
-      <!-- single-counter start -->
-      <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-        <div class="single-counter">
-          <h2 class="counter">15</h2>
-          <h3>МЕНЕДЖЕРОВ</h3>
-        </div>
-      </div>
-      <!-- single-counter end -->
-    </div>
-  </div>
-</div>
-<!-- counter-area end -->
-<!-- video-area start -->
-<div class="video-area-4 fix">
-  <div class="dark-bg"></div>
-  <div id="bg-container">
-    <video id="bg" poster="/img/slider/slider-1/3.jpg" autoplay loop controls tabindex="0">
-      <source src="video/video-360p.mp4" type="video/mp4">
-    </video>
-  </div>
-  <div class="video-text">
-    <h2><strong><span class="typewrite" data-period="2000" data-type='[ "БЫСТРАЯ","КАЧЕСТВЕННАЯ","СВОЕВРЕМЕННАЯ" ]'>
-			<span class="wrap"></span>
-		    </span></strong> ДОСТАВКА АВТОМОБИЛЕЙ</h2>
-    <p></p>
-    <a class="read-more" href="#">Оставить заявку</a>
-  </div>
-</div>
-<!-- video-area end -->
-<!-- service-dev-area start -->
-<div class="service-dev-area">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-6">
-        <div class="service-dev-img">
-          <img src="img/slider/slider-1/1.jpg" alt="" />
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-6 col-md-6">
-        <div class="service-dev-text">
-          <h2>ПЕРЕВОЗКА <strong>АВТОМОБИЛЕЙ</strong></h2>
-          <p>Большой текст</p>
-          <p></p>
-          <p></p>
-          <p></p>
-          <a class="readon border black" href="#">Learn More</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- service-dev-area end -->
-
+<!-- latest blog area start -->
 <div class="latest-blog-area fix">
   <!-- top blog start -->
   <div class="latest-blog-desc">
@@ -853,7 +854,7 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Преимущества</a></li>
+                <li><a href="#">Услуги</a></li>
                 <li><a href="#">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
                 <li><a href="#">Контакты</a></li>
