--- a/about-us.html
+++ b/about-us.html
@@ -94,7 +94,7 @@
               <ul id="nav">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="#">О компании</a></li>
-                <li><a href="#">Преимущества</a></li>
+                <li><a href="#">Услуги</a></li>
                 <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="#">Москва - Санкт-Петербург</a></li>
@@ -153,7 +153,7 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="#">О компании</a></li>
-                <li><a href="#">Преимущества</a></li>
+                <li><a href="#">Услуги</a></li>
                 <li><a href="#">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="#">Москва - Санкт-Петербург</a></li>
@@ -512,7 +512,7 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="#">О компании</a></li>
-                <li><a href="#">Преимущества</a></li>
+                <li><a href="#">Услуги</a></li>
                 <li><a href="#">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
                 <li><a href="#">Контакты</a></li>
