--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   ============================================ -->
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>GTrans - перевозка любых автомобилей по России и СНГ</title>
+  <title>GTrans | перевозка любых автомобилей по России и СНГ</title>
   <meta name="description"
         content="Компания Gtrans перевозит автомобили любого типа по России и странам СНГ - легковые, коммерческие, грузовые, автобусы">
 
@@ -94,7 +94,7 @@
               <ul id="nav">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Преимущества</a></li>
+                <li><a href="#">Услуги</a></li>
                 <li><a href="directions.html">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="index-4.html">Москва - Санкт-Петербург</a></li>
@@ -153,7 +153,7 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Преимущества</a></li>
+                <li><a href="#">Услуги</a></li>
                 <li><a href="#">Направления</a>
                   <ul class="sub-menu">
                     <li><a href="#">Москва - Санкт-Петербург</a></li>
@@ -287,8 +287,7 @@
                data-splitout="none"
                data-elementdelay="0.1"
                data-endelementdelay="0.1"
-               style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#'
-                                                                                               class='readon border large white'>Узнать
+               style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#about-company' class='readon border large white'>Узнать
             больше</a>
           </div>
         </li>
@@ -377,8 +376,8 @@
                data-splitout="none"
                data-elementdelay="0.1"
                data-endelementdelay="0.1"
-               style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#'
-                                                                                               class='readon border large white'>Узнать
+               style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#about-company'
+               class='readon border large white'>Узнать
             больше</a>
           </div>
         </li>
@@ -467,8 +466,7 @@
                data-splitout="none"
                data-elementdelay="0.1"
                data-endelementdelay="0.1"
-               style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#'
-                                                                                               class='readon border large white'>Узнать
+               style="z-index: 11; max-width: auto; max-height: auto; white-space: nowrap;"><a href='#about-company' class='readon border large white'>Узнать
             больше</a>
           </div>
         </li>
@@ -478,7 +476,7 @@
 </div>
 <!-- END HOME SLIDER -->
 <!-- welcome-area start -->
-<div class="welcome-area fix" id="about">
+<div class="welcome-area fix" id="about-company">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -993,7 +991,7 @@
               <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="about-us.html">О компании</a></li>
-                <li><a href="#">Преимущества</a></li>
+                <li><a href="#">Услуги</a></li>
                 <li><a href="#">Направления</a></li>
                 <li><a href="#">Автопарк</a></li>
                 <li><a href="#">Контакты</a></li>
